--- a/minishop/shop.html
+++ b/minishop/shop.html
@@ -72,7 +72,7 @@
                                 <button id="plus" name="plus">+</button>
                             </div>
                         </div>
-                        <button class="omni_buttonSubmit" type="button" id="AddToCart" style=" background-color: gray; " id="interaction-editor-1-alno-ee-7">Add to Cart</button>
+                        <button class="omni_buttonSubmit" type="button" id="AddToCart" style=" background-color: gray; " >Add to Cart</button>
                     </div>
                 </div>
 
