--- a/bootstrapMinishop/index.html
+++ b/bootstrapMinishop/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6">
         <a href="#" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail h" src="pictures/4.png" alt="">
+          <img class="img-fluid img-thumbnail h" src="pictures/8.jpg" alt="">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6">
