--- a/bootstrapMinishop/index.html
+++ b/bootstrapMinishop/index.html
@@ -50,25 +50,27 @@
     </div>
   </nav>
 
-   <!-- shopping cart -->
-   <div class="container-right" style="z-index: 999; display:none">
-    <div class="box1" style="color:#fff;">
-      <div class="box-title">My Shopping Cart
-        <button id="btnClose" class="btn-close">Close</button>
+  <!-- shopping cart -->
+  <div class="container-right" style="z-index: 999; display:none; ">
+    <div class="box1" style="color:#fff; ">
+      <div class="box-title"><h3>My Shopping Cart
+        <button id="btnClose" class="btn-close" style="float:right">Close</button></h3>
       </div>
 
       <hr>
-      <div class="box2"></div>
+      <div class="box2" style="max-height: 600px; overflow-y: scroll; overflow-x: hidden;"></div>
       <!-- <h3 class="description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam.</h3>
         <br>
         <p  style="padding:8px;"><span class="price">Price: 30$</span> <span class="quantity">Quanitity:1</span> </p> -->
     </div>
     <hr>
     <br>
-    <div id="total-price" style="color:#fff;">
-      <!-- <p style="padding-left:10px;">Total Price: <span id="totoal-price"> 30$ </span></p> -->
+    <div>
+      <div id="total-price" style="color:#fff;">
+        <!-- <p style="padding-left:10px;">Total Price: <span id="totoal-price"> 30$ </span></p> -->
+      </div>
+      <button class="btn1" id="purche">Proceed To Checkout</button>
     </div>
-    <button class="btn1" id="purche">Proceed To Checkout</button>
   </div>
   <div class="back">
     <button class="btn-back">Back</button>
@@ -145,7 +147,7 @@
 
   </div>
 
- 
+
 
   <!-- popup -->
   <div id="popup" style="width: 100%; height: 100%; left: 0px; top: 0px; display:none">
