--- a/bootstrapMinishop/index.html
+++ b/bootstrapMinishop/index.html
@@ -24,7 +24,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,10 +51,10 @@
   </nav>
 
   <!-- shopping cart -->
-  <div class="container-right" style="z-index: 999; display:none; ">
+  <div class="container-right" style=" display:none; ">
     <div class="box1" style="color:#fff; ">
       <div class="box-title"><h3>My Shopping Cart
-        <button id="btnClose" class="btn-close" style="float:right">Close</button></h3>
+        <button id="btnClose" class="btn-close" style="float:right; font-weight:bold;">Close</button></h3>
       </div>
 
       <hr>
@@ -77,9 +77,9 @@
   </div>
   </div>
   <!-- Page Content -->
-  <div class="container" style="z-index: 1;">
+  <div class="container" >
 
-    <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1>
+    <h1 class="my-4 text-center text-lg-left">Shop</h1>
 
     <div class="row text-center text-lg-left">
 
